--- a/app/src/main/res/layout/rv_item_user.xml
+++ b/app/src/main/res/layout/rv_item_user.xml
@@ -14,14 +14,14 @@
         android:layout_marginEnd="348dp"
         android:layout_marginBottom="1dp"
         android:text="telepon"
-        app:layout_constraintBottom_toTopOf="@+id/nama"
+        app:layout_constraintBottom_toTopOf="@+id/nama_petani"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/nama"
+        android:id="@+id/nama_petani"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -48,7 +48,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nama" />
+        app:layout_constraintTop_toBottomOf="@+id/nama_petani" />
 
     <TextView
         android:id="@+id/email"
